devops/order-service/order-server-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
        version: v1
    spec:
      containers:
        - name: order-service
          image: lifezqy/order-service:v1
          resources:
            requests:
              cpu: 0.1
              memory: 200
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: order-service
