devops/order-service/ingress-order.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: order-ingress

#  annotations:
#
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

    - host: order.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: order-service

                port:

                  number: 80
